@@ -14,7 +14,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: proc-old.test,v 1.9 2002/04/15 17:45:06 msofer Exp $
+# RCS: @(#) $Id: proc-old.test,v 1.10 2003/03/27 21:44:05 msofer Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
@@ -481,7 +481,7 @@ test proc-old-7.14 {return with special completion code} {
 } {1 {couldn't open "_bad_file_name": no such file or directory} {couldn't open "_bad_file_name": no such file or directory
     while executing
 "tproc2"} none}
-test proc-old-7.14 {return with special completion code} {
+test proc-old-7.15 {return with special completion code} {
     list [catch {return -badOption foo message} msg] $msg
 } {1 {bad option "-badOption": must be -code, -errorcode, or -errorinfo}}
 
